--- a/src/login/templates/login/login.html
+++ b/src/login/templates/login/login.html
@@ -1,24 +1,22 @@
-{% extends 'core/base.html' %} {% load static %} {% block header %}
-
-<link rel="stylesheet" href="{% static "login/login.css" %} ">
-
-{% endblock %} {% block content %} {% load widget_tweaks %}
-
-<div class="modal-dialog">
-	<div class="login-container">
-		<h1>Login to Your Account</h1>
-		<br>
-		<form method="post">
-			{% csrf_token %}
-			{% render_field form.username placeholder=form.username.label %} 
-			{%render_field form.password placeholder=form.password.label %} 
-			<input type="submit" name="login" class="login login-submit" value="Login">
-		</form>
-
-		<div class="login-help">
-			<a href="#">Register</a> - <a href="#">Forgot Password</a>
-		</div>
-	</div>
-</div>
-
+{% extends 'core/base.html' %} 
+{% load static %} 
+{% block header %}
+<link href="{% static 'login/login.css' %}" rel="stylesheet">
+{% endblock %} 
+{% block content %} 
+{% load widget_tweaks %}
+<body class='text-center'>
+	<form class="form-signin" method="POST">
+		  {% csrf_token %} 				 
+		  <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+	      <label for="inputEmail" class="sr-only">Email address</label>
+	      {% render_field form.username class="form-control" placeholder="Email address" required="" autofocus="" %}
+	      <label for="inputPassword" class="sr-only">Password</label>
+	      {% render_field form.password class="form-control" placeholder="Password" required="" %}
+	      {% if form.errors %}
+	      <p class="text-danger">wrong user or password!!</p>
+	      {% endif %}
+	      <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+	</form>
+</body>
 {% endblock %}
